@@ -15,10 +15,8 @@ class CheckBoxWidget(BaseWidget):
         self.required = self.__required = False
         self.__name = self.name
         self.name = ""
-
-    label = property(lambda self: "")
-
-    hint = property(lambda self: "")
+        self.label = ""
+        self.hint = ""
 
     disabled = False
 
@@ -28,11 +26,11 @@ class CheckBoxWidget(BaseWidget):
     def __call__( self ):
         """Render the widget to HTML."""
         value = self._getFormValue()
-        html = "<label for='%s'>%s</label>\n" % (self.name , translate(super(BaseWidget,self).label, context=self.request))
+        html = "<label for='%s'>%s</label>\n" % (self.name , translate(self.context.title, context=self.request))
         if self.__required:
             html += "<span class='fieldRequired' title='%s'>%s</span>" % (translate(_(u'title_required'), context=self.request, default='Required'), translate(_(u'label_required'), context=self.request, default='(Required)'))
-        if super(BaseWidget, self).hint:
-            html += "<div class='formHelp'>%s</div>" % translate(super(BaseWidget, self).hint, context=self.request)
+        if self.context.description:
+            html += "<div class='formHelp'>%s</div>" % translate(self.context.description, context=self.request)
         if super(BaseWidget, self).error() != '':
             html += "<div>%s</div>" % translate(super(BaseWidget, self).error(), context=self.request)
         
